blog page updated

--- a/blog.html
+++ b/blog.html
@@ -57,7 +57,7 @@
               Discuss the scope of var, let, and const..
             </div>
             <div class="collapse-content"> 
-              <p>tabindex="0" attribute is necessary to make the div focusable</p>
+              <p>var is function scope variable</p>
             </div>
           </div>
 
