Image folder uploded

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             <!-- Logo container -->
             <div class="">
-              <img src="Logo.png" alt="">
+              <img src="image/Logo.png" alt="">
             </div>
             <!-- Sort by view Button -->
             <div  id="sort-btn" class="">
